--- a/.github/workflows/python-mypy.yml
+++ b/.github/workflows/python-mypy.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade mypy
-        python -m pip install git+https://github.com/bluesky/bluesky
+        pythom -m pip install .
     - name: Run mypy
       run: |
         mypy yaqd_dwyer
