--- a/.github/workflows/python-mypy.yml
+++ b/.github/workflows/python-mypy.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-python@v2
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip!=22.1.0
+        python -m pip install --upgrade pip!=22.1.*
         python -m pip install --upgrade mypy
         python -m pip install .
     - name: Run mypy
