--- a/.github/workflows/run-entry-points.yml
+++ b/.github/workflows/run-entry-points.yml
@@ -19,7 +19,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip!=20.3.4,!=21.0.*
+        python -m pip install --upgrade pip!=22.1.*
         python -m pip install --upgrade wheel setuptools
         python -m pip install --upgrade .
     - name: Test with pytest
