ENH: break up and rename daemons (#3)
* ENH: break up and rename daemons

* entry points workflow

* fix entry points in pyproject.toml

* add

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* pre-commit autoupdate

* rm codeql

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/yaqd_dwyer/dwyer-16c.toml
+++ b/yaqd_dwyer/dwyer-16c.toml
@@ -1,7 +1,7 @@
-protocol = "dwyer-temperature-controller"
+protocol = "dwyer-16c"
 doc = ""
 traits = ["has-limits", "has-position", "uses-uart", "uses-serial", "is-daemon"]
-hardware = ["dwyer:16b", "dwyer:16c"]
+hardware = ["dwyer:16c"]
 
 [links]
 source = "https://gitlab.com/yaq/yaqd-dwyer"
