--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "flit_core.buildapi"
 [tool.flit.metadata]
 module = "yaqd_dwyer"
 dist-name = "yaqd-dwyer"
-author = "Blaise Thompson"
-author-email = "blaise@untzag.com"
+author = "yaq developers"
+author-email = None
 home-page = "https://yaq.fyi"
 description-file = "README.md"
 requires-python = ">=3.7"
