update yaq-traits pre-commit path (#5)
* update yaq-traits pre-commit path

* -project

* no email

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,7 @@ build-backend = "flit_core.buildapi"
 [tool.flit.metadata]
 module = "yaqd_dwyer"
 dist-name = "yaqd-dwyer"
-author = "Blaise Thompson"
-author-email = "blaise@untzag.com"
+author = "yaq developers"
 home-page = "https://yaq.fyi"
 description-file = "README.md"
 requires-python = ">=3.7"
