update dwyer-16b config

--- a/example-yaq-configs/dwyer-16b/simple.toml
+++ b/example-yaq-configs/dwyer-16b/simple.toml
@@ -4,6 +4,6 @@ serial_port = "/dev/ttyUSB0"
 baud_rate = 9600
 modbus_address = 1
 byte_size = 8
-stop_bits = 1
-parity = "E"
+stop_bits = "one"
+parity = "even"
 modbus_handle_echo = true
